--- a/uni/Systemtrafo/3_Sitzung_15-11-2017.md
+++ b/uni/Systemtrafo/3_Sitzung_15-11-2017.md
@@ -187,3 +187,129 @@ Warum diese klaren Muster?
 
 4. Import-Ansatz
 - Verfassung und Regierungssystem werden vor allem nach dem Muster "erfolgreicher" Vorbilddemokratien geformt
+
+
+### 3.2.2 Genese demokratischer Regierungssysteme (ab S.109)
+
+Historisch-konstitutionelle Erklärungen für präsidentielle Regierungssysteme Lateinamerikas in Verbindung mit Import Ansatz am sinnvollsten
+- in jenen Ländern in denen vor autoritären Regimen eine präsidentielle Demokratie bestand, wurden im Zuge der Redemokratisierung die Verfassungen mit wenigen Änderungen wieder in Kraft gesetzt
+- Präsidentialismus am ehesten bevorzugt durch Eliten etc. in Lateinamerikas, weil am ehesten mit traditionellen Mustern der politischen Kultur und der Personalisierung der Herrschaftsformen übereinstimmen
+
+Semipräsidentielle Regierungssysteme vor allem als typische Ergebnisse einer machtpolitischen Pattsituation gesehen werden in der weder altes Regime, noch demokratische Kräfte Verfassung allein bestimmen konnten
+- alte Eliten sehen Macht am ehesten in Form von starkem Präsidenten gewahrt
+- Demokraten für starke Parlament und von dessen Vertrauen die Regierung abhängt
+
+Parlamentarische Regierungssysteme
+- entstanden im Zuge der dritten Demokratisierungswelle, vor allem als Folge von Staatsneugründungen, in der demokratische Opposition dominierende Rolle spielt
+
+Mit Verabschiedung der Verfassung endet die Demokratisierungsphase
+- Demokratie nicht gesichert, jedoch größte Unsicherheit vorbei
+- folgende Konsolidierungsprozess kann auf relative Sicherheit stützen
+
+Phase demokratischer Konsolidierung
+- demokratische Institutionen müssen innere Stabilität gewinnen und somit an gesamte politische System und Akteure Konsolidierungsimpulse abgeben
+
+## 3.3 Konsolidierung
+- demokratische Institutionen durch Verfassung oder Gesetze etabliert
+- ersten freien Wahlen ("Gründungswahlen") als Beginn demokratischer Konsolidierung 
+  - sinnvoller Verabschiedung einer Verfassung oder Revision alter Verfassung als Beginn wahrzunehmen
+  - wichtigste Elemente etabliert, keine Normunsicherheit für Akteure
+
+Wann Demokratie konsolidiert? 
+- Demokratie: wenn R. Dahls 8 institutionelle und prozedurale Minima installiert sind
+- Konsolidierung: G. Pridham Unterscheidung zwischen "negativer" und "positiver" Konsolidierung
+  - Demokratien negativ konsolidiert, wenn kein relevanter Akteur außerhalb demokratischer Institutionen Interessen und Ziele verfolgt weil keine attraktive Alternative zur Demokratie existiert
+  - Positiv ist ein System, wenn gesamte System Einstellungs-, Werte-, und Verhaltensmuster der Bürger einen stabilen Legitimitätsglauben gegenüber Demokratie reflektieren 
+  - => solches Konzept rechnet mit längerer Zeit für Stabilisierung postautoritärer Demokratie, als auf Eliten bezogene negative demokratische Konsolidierung
+
+Positive Konsolidierung in vier analytische Ebenen differenziert, gleichzeitig zeitliche Abfogle der Konsolidierung 
+- 1. Ebene konstitutionelle Konsolidierung: bezieht sich auf zentralen politischen Verfassungsinstitutionen (Makroebene Strukturen) 
+  - i.d.R. am frühesten abgeschlossen und wirkt durch normative, sanktionierende und damit strukturierende handlungseingrenzende Vorgaben auf zweite Ebene
+
+- 2. Ebene repräsentative Konsolidierung: betrifft territoriale und funktionale Interessenrepärsentation (Mesoebene Akteure) 
+  - Konstellation und Handlung der Akteure auf Ebene 2 entscheiden wie Normen und Sturkturen auf erste Ebene konsolidiert werden und ob gemeinsame Konfiguration von Ebenen 1 und 2 das Verhalten der Akteure auf Ebene 3 in Hinsicht auf demokratische Konsolidierung positiv oder negativ beeinflusst
+
+- 3. Ebene Verhaltenskonsolidierung: agieren informelle Akteure wie Militär, Großgrundbesitzer (Mesoebene informelle politische Akteure) 
+  - Konsolidierungserfolge der 1. und 2. Ebene entscheidend ob informelle Akteure ihre Interessen innerhalb oder außerhalb bzw. gegen demokratische Normen und Institutionen verfolgen werden
+- ersten drei Ebenen konsolidiert, gehen entscheidende Impulse auf demokratiestabilisierende Bügergesellschaft aus
+
+- 4. Ebene Konsolidierung der Bügergesellschaft (civic culture): 
+  - Herausbildung einer Staatsbürgerkultur als soziokultureller Unterbau der Demokratie (Mikroebene Bürger)
+- immunisierende Wirkung von demokratischer Zivilkultur auf Ebenen 1 bis 3 
+
+Minimalistische Verständnis => insgesamt drei Ebenen, durch 4. Ebene maximalisitischer Begriff der demokratischen Konsolidierung
+
+### 3.3.1 konstitutionelle Konsolidierung
+- hierarchisch übergeordnete Stellung der Verfassung im Konsolidierungsprozess
+- durch bindende Verfassungsnormen und Institutionen werden strategische Handlungen der Akteure auf Grundkonsens verpflichtet 
+- Verhalten von Eliten für Konsolidierung entscheidend => Minimalkonsens zwischen Eliten, dann gute Konsolidierungschancen auf allen 4 Ebenen
+
+Die formale Legitimation der Verfassung 
+- Verfahrenslegitimität auf drei Ebenen zu beantworten:
+  - Legitimität von oben: nur dann legitim, wenn verfassungsgebende Versammlung demokratisch legitim zustande kam
+  - intere Verfahrenslegitimität: Verfahren innerhalb verfassungsgebende Versammlung muss demokratischen Prinzipien folgen
+  - Legimität von unten: Verfassungsentwurf wird dem Volk in einem Referendum zur Ratifizierung vorgelegt
+
+Über 4 Typen der Verfahrenslegitimation zu systematisieren (Reihenfolge hierarchisch von sehr demokratisch bis demokratietheoretisch bedenkliche" Verfahren) 
+- 1.unabhängige Versammlung vom Volk gewählt , arbeitet Verfassungsentwurf aus und legt Volk vor in Referendum
+- 2. verfassungsgebende Versammlung wird demokratisch gewählt, arbeitet VErfassung aus und beschließt, sowie verabschiedet sie selbst -> Volk nicht vorgelegt
+- 3. von bestimmtem Staatsorgan Verfassungsentwurf ausgearbeitet; der vom Parlament verabschiedet wird; keine vom Parlament unabhängige Versammlung zur Ausarbeitung gewählt. Referendum findet statt
+- 4. von bestimmtem Staatsorgan wird Verfassung ausgearbeitet und vom amtierenden Parlament verabschiedet. Referendum findet nicht statt
+
+Empirische Legitimation: 
+- Verfassung durch ihre Wirkung auf faktische Politik und gesellschaftliche Verhältnisse azsreichendes Maß an Legitimitätsglauben zuwächst => Chancen gut, wenn in Verfassung drei Prinzipien prägend eingelassen werden
+  - soziale und politische Inklusion -> es dürfen keine größeren strukturellen Minderheiten benachteiligt werden
+  - institutionelle Effizienz -> politische Institutionen müssen zügig Entscheidungen und Implementation zulassen
+  - politische Effektivität -> politische Entscheidungen müssen sichtbar zur Lösung gesellschaftlicher Probleme beitragen 
+
+Die Inklusions, Effizienz-, und Effektivitätsprobleme werden auf zwei Ebenen diskutiert: 
+- Ebene der Regierungssysteme -> welches System eignet sich am besten für Konsolidierung junger Demokratie
+- Art des politischen Repräsentations und Entscheidungsmodus -> erzielen Mehrheits- oder Konsensdemokratien Konsolidierungsanforderungen am besten? 
+
+4 Kernargumente für Beantwortung der Fragen
+  - Parlamentarische Regierungssysteme i.d.R. mehr Parteien -> ermöglicht inklusivere und flexiblere Koalitionsbildung in komplexen Gesellschaften (viele Ethnien)
+  - Regierungen in parlamentarischen Systemen verfügen häufiger über stabile parlamentarische Mehrheitn für Reformprogramme als präsidentielle Exekutiven
+  - enge wechselseitige Abhängigkeit von Legislative und Exekutive in parlamentarischen Systemen (Recht der Regierung Parlament aufzulösen und Möglichkeit des Parlaments Reggierung zu Fall zu bringen durch Misstrauensvotum) bergen Verfahrensweisen um lähmende Blockaden aufzulösen
+  - präsidentielle Systeme fördern politische Polarisierung, bergen Gefahr lähmender Konflikte 
+  - Linz -> Vorteile parlamentarischer Regierungssysteme "Flexibilität" vs "Rigidität" des Präsidentialismus
+
+Kritik (Nohlan / Thibaut) -> entscheidender für demokratische Konsolidierung ob und wie zentrale Institutionen mit Wahl und Parteisystem, Verbändewesen etc.  harmonieren
+
+### 3.3.2 Repräsentative Konsolidierung
+- Formen intermediärer Interessensvermittlung zwischen Gesellschaft und staatlichen Entscheidunsinstanzen in Hinsicht auf terretorialen und funktionalen Dimension unterscheidbar
+  - Parteisystem: in postautoritären Gesellschaften durch drei Einflüsse geformt: 1. Transformationskonflikt zwischen autoritärem Regime und demokratischer Opposition; 2. gesellschaftliche cleavages; 3. das Wahlsystem
+  - Wahlsysteme: relative und absolute Mehrheitswahlsysteme, sowie reine Verhätlniswahlsysteme können Konsolidierung gefährden. MW -> diskriminieren größtere soziale Grupen; VW -> behindern Formierung stabiler Regierungsmehrheit
+  - demokratische Konsolidierung durch moderate Vielparteiensysteme gefördert, Parteien dann fördernd, wenn drei Kriterien (Fragmentierung, Polarisierung und volatility (Nettowählerfluktion))
+
+Fragmentierung: stark fragmentiere Parteisysteme als stabilitätsgefährdend 
+Polarisierung und Antisystemparteien: Parteisysteme, die geringe ideologische Distanz zwischen relevanten linken und rechten aufweisen und keine Antisystempartei haben besitzen Konsolidierungsvorteile
+  - weniger die Antisystemparteien, als die kaum vorhandene gesellschaftliche VErankerung vieler Parteien in Afrika, Ostasien und Osteuropa behinderten die Konsolidierung
+Wählerfluktuation: Parteisysteme mit niedriger und mittlerer Wählerfluktuation wirken konsoliduerngsfördernd auf das gesamte politische System; ebenfalls Indikator für Trends 
+Verbändewesen: Interessensvermittlung allein durch Parteien nicht möglich 
+- funktionale Interessensvermittlung durch Verbände als Ergänzung 
+- aus demokratietheoretischer Sicht garantiert die verbandliche Selbstorganisierung der Gesellschaft wirkungsvolle autonome Handlungsräume dem Staat gegenüber (i.d.R. auch Steuerentlastung des Staates) 
+- Ordnungspotential zur Reduzierung der steuerungspolitischen Unsicherheit ebenso durch Verbände gegeben 
+- junge Verbände in unkonsolidierten Systemen besitzten selten Konzertierungen, notwendige Organisations und Zentralisierungsgrade sowie Selbstverpflichtungsfähigkeit hinsichtlich eigener Organisationsmitglieder, diese sind wiederum wichtige Vorraussetzungen für Kooperation mit anderen Verbänden
+- mit fortschreiten des Konsolidierungsprozesses wächst demokratische, soziale und ökonomische Bedeutung der organisierten Interessensverbände 
+  - Verbändewesen schwach ausgeprägt kann mangelhafte funktionale Interessensvermittlungsstruktur zu einer "overparlamentarization" und "overpartitization" des politischen Systems führen und den demokratischen Konsolidierungsprozess behindern 
+
+### 3.3.3 Verhaltenskonsolidierung der informellen politischen Akteure
+- Vetomächte mit wichtiger Rolle im Kontext eines Systemwechsels, die kein verfassungsgestütztes Mandat zum politischen Handeln besitzen 
+- ihr Handeln von außerordentlicher Bedeutung für Konsolidierung, Demokratisierung oder den Zusammenbruch von Demokratien 
+- je weniger Vertrauen informelle Akteure in offizielle politische Institutionen (Ebene 1) besitzen, je mehr sie ihre vitalen Interessen von deren Entscheidungen bedroht sehen, umso größer ist Gefahr demokratiegefährender Aktionen auf Ebene 3 (Worst-Case Situationen) 
+- je stärker Ebene 1 und 2 konsolidiert sind, umso mehr verlieren die genannten gesellschaftlichen und militärischen Elitegruppen ihr Vetomotiv und ihr Interventionspotential gegenüber neuen Demokratien -> konsolidiertes demokratisches Konzept zwingt sie zu demokratiekonformem Verhalten 
+
+### 3.3.4 Konsolidierung der Bürgergesellschaft 
+- paradoxerweise bedarf es in den ersten drei Ebenen nur geringer aktiver Teilnahme der breiten Bevölkerung für eine erfolgreiche Konsolidierung 
+- Demokratie fundierende Staatsbürgerkultur in zwei miteinander verflochtenen Dimensionen unterteilbar: civic culture und civil society 
+  - civic culture: Mischtyp politischer Kultur; ideale Staatsbürgerkultur von drei Balancen geprägt
+  - Balance ideologischer Subkulutren in einer Gesellschaft
+  - Balance zwischen parochialen, integriert-passiven und den deokratisch-partizipativen Subkulturen in der Gesellschaften
+  - Balance zwischen den genannten Subtypen und deren Einstellungen und Werte im Bewusstsein eines jeden Individuums 
+
+  - civil culture: bezeichnet den Aspekt des Bürgerhandelns in der Gesellschaft und gegenüber dem Staat -> Zivilgesellschaft zur Stärkung der Demokratie (4 Argumente) 
+  - 1. Locke: Idee einer unabhängigen gesellschaftlichen Spähre und Kontrolle gegenüber dem Staat; Rechte der Individuen vor staatlicher Wilkür geschützt; zentrale Funktion der civil culture ist die Autonokmie des Individuums, die Sicherung des Eigentums und eine vom Staat geschützte gesellschaftliche Spähre 
+  - 2. Truman/Lipset: Wechselseitiges Kommunikationsnetz zum Abbau gesellschaftlicher Konflikte; Rekrutierungspotential für politische Eliten und entlasten Staat durch Leistungsübernahmen 
+  - 3. Tocqueville: Zivilgesellschaftliche Assoziationen und Vereinigungen sind "Schulen der Demokratie", in denen demokratisches Denken und Verhalten durch alltägliche Prxis eingeübt werden; diene der Verankerung von Bürgertugenden wie Toleranz, Akzeptanz, Kompromissbereitschaft etc. 
+  - 4. Keane /Cohen: zivilgesellschaftliche Strukturen erweitern Bereich der Interessensartikulation und aggregation durch Aufbau eines vorpolitischen pluralistischen Interessensgeflechts; Möglichkeit des Agenda-Settings und öffentliche Thematisierung von Konflikten sollten prägenden Einfluss auf Inputseite politischen Systems haben 
+  - 2 und 3. uneingeschränkt positiv für Demokratie 1 und 4 bedenklich (zu frühe, Stabilitätsgrad junger Demokratie nicht angemessende starke politische Partizipation) -> Gefahr von Konfliktsituationen
