--- a/uni/Systemtrafo/4_Sitzung_23-11-2017.md
+++ b/uni/Systemtrafo/4_Sitzung_23-11-2017.md
@@ -170,4 +170,47 @@ Transitionsforschung zu Südeuropa ist sich weitgehend einig, dass rasche Konsol
   - trug zwar zur Polarisierung der pol Kultur bei, überschritt aber auf Parteiebene nicht die demokratischen Grenzziehungen
 
 3. Volatilität
+- Messung der Summe der Netto-Wählergewinne und Netto-Wählerverluste der relevanten Parteien von Wahl zu Wahl gemessen. Niedrige Fluktuation weist auf Grad der Konsolidierung des Parteiensystems hin
+- Volatilitätsrate der drei südeuropäischen Länder von den ersten freien Wahlen bis Mitte der 1970er bis Mitte 1990er höhere Wählerfluktuation. Griechenland 12,5% -> keine destabilisierende Anomalie
+
 4. "Kritische Wahlen"
+- volatiliy verbirgt Zäsur/dramatische Wählerverschiebung einer bestimmten Parlamentswahl -> solche als "kritische Wahlen" bezeichnet. Kritisch, weil offen ob dekonsolidierendes dealignment in ein konsolidierendes realignment einer erneuten Wähler-Partei-Bindung mündet.
+- Tritt erneute Bindung nicht ein, bleibt Konfiguration des Parteiensystems instabil. Solch instabiles Parteiensystem kann in nicht konsolidierten Demokratien erhebliche destabilisierende Wirkungen entfalten -> vor allem der Fall, wenn in raschen Abständen dramatische Wählerverschiebung zwischen Parteilagern. (interbloc volatility).
+- anhaltende Volatilität könnte in Parteienverdrossenheit münden, im worst Case Demokratieverdrossenheit. -> folgt rasche Realignment auf kritische Wahl, kann diese entscheidende Zäsur zwischen noch nicht gefestigtem transitorischen hin zu einem stabilen Parteiensystem darstellen. 
+- in Griechenland 1981, nach der Wahl stabilisierte sich das Parteiensystem wieder.
+
+### 4.5.2 Verbände in den industriellen Beziehungen
+ wie in meisten Transformationsländern dauert in Portugal, Griechenland und Spanien die Konsolidierung der funktionalen Interessenrepräsentation bei den beiden großen Verbänden von Kapital und Arbeit länger als die rasche erste Konsolidierung der Parteien und Parteiensysteme. Vor allem Herausbildung stabiler Verhandlungsmuster zwischen Gewerkschaften und Arbeitgeberverbänden erwies sich zunächst als schwierig und von Konflikten besetzt. 
+
+industrielle Beziehungen der Länder weder syndikalistischen noch korporatistischen Typ zuzuordnen. Grieschiche Arbeitsbeziehungen von etastischen Korporatismus geprägt. 
+
+die Interessengruppen und Verbände waren in Griechenland stets organisatorisch unterentwickelt, institutionell schwach und eng am parteipolitischen Dualismus von ND und PASOK ausgerichtet
+  - in Verfassung von 1975 erstmals gewerkschaftliche Streikrecht und das kollektive Tarifvertragsrecht explizit verankert
+  - jedoch vor allem 1975-1980 von Regierung restriktiv ausgelegt 
+
+griechische Gewerkschaften sind organisatorisch zersplittert, von parteipolitischen Konflikten durchzogen
+- Gewerkschaften nach Prinzip der Einheitsgewerkschaft organisiert, doch diese Einheit wird mehrfach gebrochen durch: Konkurrenz, 4000 Einzelgewerkschaften sowie richtungspolitische Konkurrenz innerhalb größten gewerkschaftlichen Dachverbands GSEE
+- Gewerkschaften stehen schwache Arbeitgeberverbände gegenüber
+  - Bis 1985 kaum Gehör bei Regierung.
+- organisatorische Fragmentierung der Arbeitgeber- wie Arbeitnehmerseite, die Reformverschlossenheit der Unternehmerverbände bis weit in die 1980er hineun und die steten Versuche der Regierung, Gewerkschaften zu instrumentalisieren, haben Griechenland während Phase der demokratischen Konsolidierung keine kooperative Arbeitsbeziehungen entstehen lassen
+  - Folge -> Gewerkschaften streikten oft für Durchsetznung ihrer Interessen. 
+
+## 4.6 Die Integration der Vetoakteure
+- in Periode postautoritärer Umbrüche, extrakonstitutionelle Vetorolle des alten Regimes gegenüber zivilen demokratischen Politik beansprucht.
+- mächtigste und für Demokratie bedrohlichste Vetoakteur das Militär. Vor allem dann Risiko, wenn mit vorangegangenem autoritärem Regime eng verbunden. -> vor allem in Griechenland und Spanien der Fall. Mussten sich in eigenem Interesse schützen unter Verbrechen autoritären Regimes gezogen zu werden. Keine politische Rolle des Militärs in Griechenland. 
+- Morlino und Montero: in den drei Ländern sind realisitische politische Kulturen wiederzufinden, in denen die Unterstützung für Demokratie groß ist und die autoritäre Vergangenheit nur von einer Minderheit bedacht wird. Daher wurden die Südeuropäischen Ländern legitimiert und konsolidiert in Mitte der 1980er. 
+- zwei Dimensionen politischer Legitimität: diffuse legitimacy und perceived evvicacy, entsprechen weitgehend Eastons diffuse- und specific support. Aus diesen beiden konstruieren sie 4 Idealtypen von Bürgern in ihren Einstellungen gegenüber der Demokratie. 
+
+1. full democrats: "überzeugte Demokraten", die die demokratische Legitimität bedingungslos anerkennen und Demokratien als effiziente Systeme betrachten.
+2. critics: "kritische Demokraten", die die Demokratie der Autokratie vorziehen, aber gleichzeitig ihr eigenes demokratisches System als ineffizient wahrnehmen.
+3. satisfied: "Schönwetterdemokraten", die zwar ihr demokratisches System als effizient wahrnehmen, aber unter Umständen auch ein autoritäres System akzeptieren würden
+4. anti-democrats: lehnen Demokratie als Herrschaftsordnung ab 
+
+Griechenland weist bei überzeugten Demokraten und Antidemokraten demokratiefreundlichste Werte auf. Generell mehr Demokraten als Antidemokraten. 
+- Griechen auf Frage ob Demokratie Autokratie vorzuziehen zu sei, 90% befürwortet. Nach Morlino und Montero Gründe: Griechenland am stärksten politisierte Gesellschaft der drei aufgeführten Länder und Griechen zeigen mehr Interesse der Politik entgegen. Außerdem weist Griechenland größte Abneigung der Diktaturen der eigenen unmittelbaren Vergangenheit auf. Dies liegt vor allem an der kurzen Herrschaftsdauer des autoritären Systems und seiner geringen sozialen Verankerung. 
+
+Parteien am wenigsten vertraunswürdig in den drei Ländern. 
+- Gründe: häufige Involvierung in Korruption, Herausstellung der Parteienskandale, negative Wahrnehmnung des Konfliktverhaltens etc. -> gelten für meisten Demokratien 
+
+Morlino und Montero: Wähler der rechten Parteien ließen gegenüber der diffusen Legitimität die geringste Unterstützung erkennen und bewerteten die autoritäre Vergangenheit am günstigsten, Wähler linker Parteien, zeigen konsistent signifikant höhere Unterstützungswerte für die Demokratie als Wähler von Rechtsparteien.
+
