--- a/uni/Systemtrafo/5_Sitzung_30-11-2017.md
+++ b/uni/Systemtrafo/5_Sitzung_30-11-2017.md
@@ -81,7 +81,7 @@ alte frankistischen Herrschaftseliten wollten den Übergang zunächst als eine e
 Franco hatte schon zu Lebzeiten Prinz Juan Carlos als seinen Nachfolger an der dann monarchischen Spitze des Staates bestimmt
 - König sollte allerdings nicht die Machtfülle des Caudillos besitzen, sondern durch alte Herrschaftsinstitutionen des Regimes (zb *Consejo del Reino* und den *Cortes*) unterstützt und regimetreu eingerahmt werden
 
-[!zsmbr](./img/zsmbr.png "zsmbr")
+![zsmbr](./img/zsmbr.png "zsmbr")
 
 zu Beginn der Transition war also noch unklar, ob der neue König sich stärker der Demokratie oder einer monarchisch-autoritären Herrschaftsform zuwenden würde
 - für letzteres sprach zunächst Ernennung des Alt-Frankisten Arias Navarro zum Ministerpräsidenten und die Dominanz der regimetreuen Frankisten in den *Cortez*
