--- a/uni/Systemtrafo/5_Sitzung_30-11-2017.md
+++ b/uni/Systemtrafo/5_Sitzung_30-11-2017.md
@@ -89,3 +89,32 @@ zu Beginn der Transition war also noch unklar, ob der neue König sich stärker 
 
 unterschiedliche Gruppen der Opposition nutzen Liberalisierung des alten Regimes um sich in der *Coordinacion Democratica* (CD) zusammenzuschließen
 - unter diesem organisatorischen Dacht gelang es, die oppositionellen Aktivitäten von Christdemokraten, Liberalen, Sozialdemokraten, Sozialisten, Kommunisten, Maoisten + illegalen Gewerkschaften zu koordinieren und die restaurative Politik von Arias Navarro durch Streiks & soziale Mobilisierung zu verhindern
+
+als klar wurde , dass die Regierung Navarro keine weiterführenden Verhandlungen mit der Opposition aufnehmen wollte, veranlassten eine Abstimmungsniederlage im Parlament durch die frankistischen Hardliner (des sogenannten *Bunkers*), sowie der Druck des Königs, Navarro zum Rücktritt
+- Ernennung Adolfo Suarez zum neuen Ministerpräsidenten, stellte Weichen für die weitere Demokratisierung
+- zweite wichtige Etappe (nach Francos Tod) der Ablösung des alten Regimes somit durchschritten
+
+dritte Phase von Juni 1976 bis Dezember 1978 war von Verhandlungen zw reformorientierten postfrankistischen Eliten einerseits & Opposition andererseits bestimmt
+- es ging nicht mehr darum ob Demokratie o Autokratie, sondern um konkrete Modi & Tempi des Übergangsprozesses + die demokr Regierungsform
+- vereinbart wurde:
+  - das grundlegende "Gesetz über die politische Reform" (1976)
+  - der Modus der ersten freien parlamentsWahlen (1977)
+  - der Inhalt der demokr Verfassung (1978)
+- Beginn der Demokratieinstitutionalisierung
+
+## 4.4 Institutionalisierung der Demokratien: Der ausgehandelte Institutionalisierungsprozess
+Institutionalisierung der Demokratie erwies sich von allen drei südeuropäischen Ländern in Spanien am schwierigsten
+- weder Institutionen noch alte Herrschaftseliten konnten durch einen radikalen Bruch beseitigt/entmachtet werden
+  - Opposition dafür zu schwach und Vetoakteur Militär zu mächtig
+- Risse im frankistischen Herrschaftsblock tief und Regimeopposition dennoch stark wenug, sodass sich beide Seiten benötigten
+  - dieses Bewusstsein der Angewiesenheit führte nach und nach zu Gesprächen der pol Führer beider Lage, die bald Charakter von Verhandlungen annahmen
+
+Ergebnis war ein von Eliten beider Seiten ausgehandelter Institutionalisierungsprozess, der über 4 Etappen verlief und an dessen Ende 1978 ein konstitutionell voll entwickeltes liberaldemokr System stand:
+1. Das Gesetz zur politischen Reform (Ley para la Reforma Politica): 
+  - Suarez gelang es die Zustimmung der Spitze des *Movimiento* und des noch frankistisch-besetzten *Cortes* zu einem Gesetz zu erlangen, das mit Volkssouveränität, Einführung des allgemeinen Wahlrechts + Verfahren für Verfassungsreform den Grundstein für eine Institutionalisierung des pol Systems legte
+    - wurde am 15.12.1975 in einem Referendum mit 94% (Wahlbeteiligung 78%) angenommen
+    - damit gelang es Suarez die Verfahrenslegalität des frankistischen Grundgesetzes zu wahren, die Zustimmung der Mehrheit der alten Eliten zu erhalten + dennoch eindeutig den Weg zur Demokratie zu beschreiten
+2. Legalisierung der Kommunistischen Partei:
+  - 
+3.
+4.
