--- a/uni/Systemtrafo/5_Sitzung_30-11-2017.md
+++ b/uni/Systemtrafo/5_Sitzung_30-11-2017.md
@@ -115,6 +115,16 @@ Ergebnis war ein von Eliten beider Seiten ausgehandelter Institutionalisierungsp
     - wurde am 15.12.1975 in einem Referendum mit 94% (Wahlbeteiligung 78%) angenommen
     - damit gelang es Suarez die Verfahrenslegalität des frankistischen Grundgesetzes zu wahren, die Zustimmung der Mehrheit der alten Eliten zu erhalten + dennoch eindeutig den Weg zur Demokratie zu beschreiten
 2. Legalisierung der Kommunistischen Partei:
-  - 
-3.
-4.
+  - im April wagte Suarez den Schritt zur Legalisierung der Kommunistischen Partei, welche auch 40 Jahre nach dem Bürgerkrieg noch einem regelrechten Kreuzzug seitens des Militärs und der Hardliner unterlag
+    - trotz Kritik von dieser Seite kam es zu keinem pol Veto
+  - nicht nur Beseitigung illiberaler Restriktion, sondern auch Voraussetzung für Einbau der Kommunisten, die eine beachtliche Mobilisierungsfähigkeit in der Industriearbeiterschaft verfügten, in das demokr Institutionalisierungsprojekt
+3. Gründungswahlen von 1977:
+  - Juni 1977: erste freie + unbeschränkt kompetitive Wahlen
+  - bürgerliche Zentrumsunion UCD von Adolfo Suarez erhielt rel Mehrheit (34.6%)
+  - Sozialisten (PSOE) zweitstärkste Partei (29.4%)
+  - rechtsgerichtete Alianza Popular (8.4%)
+  - Kommunistische Partei PCE (9.4%)
+  - Wahlergebnis hatte zwei pos Effekte:
+    - gemäßigte Parteien der Mitte ~2/3 der Stimmen (aufgrund des verstärkten Verhältniswahlsystems ~3/4 der Parlamentssitze)
+    - Herausschälung zwischen der Linken und Rechten zwei gleich große Lager heraus, die einer zentripetalen (nach innen, zur Mitte) Wettbewerbslogik folgten
+4. Ausarbeitung & Verabschiedung der Verfassung:
