--- a/uni/Systemtrafo/5_Sitzung_30-11-2017.md
+++ b/uni/Systemtrafo/5_Sitzung_30-11-2017.md
@@ -128,3 +128,13 @@ Ergebnis war ein von Eliten beider Seiten ausgehandelter Institutionalisierungsp
     - gemäßigte Parteien der Mitte ~2/3 der Stimmen (aufgrund des verstärkten Verhältniswahlsystems ~3/4 der Parlamentssitze)
     - Herausschälung zwischen der Linken und Rechten zwei gleich große Lager heraus, die einer zentripetalen (nach innen, zur Mitte) Wettbewerbslogik folgten
 4. Ausarbeitung & Verabschiedung der Verfassung:
+  - alle vier im Parlament vertretenen gesamtspanischen Parteiene (AP, UCD, PSOE, PCE) sowie die katalansichen Nationalisten (CiU) waren aktiv an Arbeiten zur demokr Verfassung beteiligt, wobei Schlüsselentscheidungen nur von Parteispitzen getroffen wurden (UCD + PSOE dominant)
+    - simultan wie Verhandlungen zw Regime & Opposition in früheren Institutionalisierungsprozess eindeutig elitengesteuert
+  - außenparlamentarische Druck durch Streik, Streikdrohungen & Demonstrationen  stärkte Verhandlungsposition der demokr Kräfte
+  - bloße Existenz des Militärs wirkte stets restriktiv und als Risikofaktor für den gesamten Demokratisierungsprozess
+
+Konsens- und Kompromisscharakter der Verfassungsausarbeitung wurde von nahezu allen Mitgliedern des Parlaments getragen
+- ganz wenige Gegenstimmen
+- mit 87,7% allgemeine Zustimmung der span Bürger
+=> somit wurde zunächst prekär scheinene Institutionalisierung der Demokratie in Spanien in einem mehrstufigen Verfahren weitgehend abgeschlossen
+- von den 3 neuen demokr Verfassung Südeuropas verfügt spanische *constitucion* zweifellos über die demokratischste Verfahrenslegitimität
