--- a/uni/Systemtrafo/5_Sitzung_30-11-2017.md
+++ b/uni/Systemtrafo/5_Sitzung_30-11-2017.md
@@ -136,5 +136,27 @@ Ergebnis war ein von Eliten beider Seiten ausgehandelter Institutionalisierungsp
 Konsens- und Kompromisscharakter der Verfassungsausarbeitung wurde von nahezu allen Mitgliedern des Parlaments getragen
 - ganz wenige Gegenstimmen
 - mit 87,7% allgemeine Zustimmung der span Bürger
+
 => somit wurde zunächst prekär scheinene Institutionalisierung der Demokratie in Spanien in einem mehrstufigen Verfahren weitgehend abgeschlossen
 - von den 3 neuen demokr Verfassung Südeuropas verfügt spanische *constitucion* zweifellos über die demokratischste Verfahrenslegitimität
+
+Institutionalisierung hielt im weiten Sinne jedoch noch bis zum 31.Oktober.1979 an, als in einem Vorgriff auf die spätere verfassungsrechtliche Regelung das letzte der dreizehn Autonomieregimes der spanischen Regionen eingerichtet wurde
+- vorläufige "Entscheidung für die Nichtentscheidung" in Hinblick auf Autonomiefrage als ein wesentlicher Beitrag zur Entlastung der Transitionsagenda
+
+"Problem der Staatlichkeit" konnte in Spanien durch kluge Politik des *timing and sequencing* erheblich entschärft werden
+- dazu zählt Terminierung der Wahlen
+  - mit Bedacht zunächst auf nationaler Ebene (1977) und dann schrittweise in den *Comunidades Autonomas*
+    - kann in Staaten die ein virulentes Staatlichkeitsproblem haben, die Gefahr sezessionistischer Desintegration entschärfen
+
+Abschließend ist auch die Person und das konkrete pol Handeln von König Juan Carlos zu erwähnen
+- trug wesentlich zum Gelingen der demokr Institutionalisierung bei
+- repräsentierte als Monarch die Einheit & territoriale Integrität des Staates
+- schien als Nachfolger Francos als Verkörperung des alten Regimes
+
+=> beides war wichtige Voraussetzung, fur Akzeptanz von Streitkräften als Oberbefehlshaber + von Militär & frankistischem *Bunker* als Garant ihrer Interessen und Werte
+- gleichzeitig erwies er sich als reformaufgeschlossen
+
+Ernennung von Adolfo Suarez zum Ministerpräsidenten durch König Juan Carlos muss als eine der frühen Schlüsselentscheidungen für Demokratisierung angesehen werden
+- Legitimation königlicher Ernennung öffnete Suarez zusätzlichen Handlungsspielraum, den dieser durch demokr Wahl ggü den autoritären Vetokräften nie hätte erhalten können
+
+![typs](./img/typs.png "typs")
